--- a/company/css/dashboard.css
+++ b/company/css/dashboard.css
@@ -4,31 +4,46 @@ body {
   padding-top: 50px;
   font-family: 'Open Sans';
   font-size: 12px;
-  background: #f2f2f2;
+  webkit-text-stroke: 0.6px; 
+  -webkit-text-stroke: 1px rgba(0, 0, 0, 0.1);
 }
 /*
     Notification Panel CSS
 
 */
-
-
+.panel-details
+{
+  border-bottom:1px #eee solid;
+  padding-bottom:3%;
+  margin-bottom:1%;
+  padding-left:1.6%; 
+}
+.img-right-emp-data
+{
+}
+.img-right-emp-data img
+{
+  border:#eee 1px solid;
+  border-radius: 4px;
+  padding: 3px;
+  height: 135px;
+  width: 135px;
+}
 /*
   Left Side bar CSS
 */
 .left-sidebar
 {
-  background: #222;
-  position: fixed;
-  top: 51px;
-  bottom: 35px;
+  background: #354052;
   left: 0;
   display: block;
   padding: 0px;
   color: #333;
-  overflow-x:hidden; 
-  z-index: 1000;
 }
-
+.navbar-default
+{
+  border-bottom:0px;
+}
 /* to highlight the active link */
 #link-active
 {
@@ -41,9 +56,12 @@ body {
 .left-sidebar li a
 {
   border-top: #3f3f3f 1px solid;
-  border-bottom: #3f3f3f 1px solid;
   vertical-align: middle;
   color: #f2f2f2;
+}
+.left-sidebar li:last-child{
+    border-bottom: #3f3f3f 1px solid;
+
 }
 .left-sidebar li a:hover
 {
@@ -95,7 +113,7 @@ body {
 }
 .left-sidebar .nav li ul li:hover
 {
-  border-right: 5px solid red;
+  border-right: 5px solid #14A7FF;
 }
 .left-sidebar .nav li ul li a 
 {
@@ -169,6 +187,14 @@ body {
   text-align: right;
   padding-right: 10px;
 }
+input
+{
+  border-radius: 20px;
+}
+.panel
+{
+  border:0px;
+}
 .panel h3
 {
   padding: 0;
@@ -207,41 +233,30 @@ body {
 .right-asset-move p
 {
   text-align: justify;
-  margin: 0px;
-}
-
-.form-horizontal .submit
-{
-  border-radius: 0px;
-}
-.form-horizontal .but-cancel
-{
-  padding-left: 10px;
-  vertical-align: middle;
+v  vertical-align: middle;
 }
 .content-container
 {
-  margin: 1%;
-  margin-left: 17.833365%;
-  margin-right: 2.166665%;
+  margin-top: 1%;
   margin-bottom: 6%;
-  padding: 1%;
   background: #fff;
   overflow-y:auto;
-  border: #eee 1px solid;
-  height: 70%;
+  height: 100%;
 }
 .breadcrumb
 {
   border-radius: 0px;
   background: #fff;
 }
-
+.view-bar
+{
+  background: #EBF1F5;
+}
 .footer-fixed
 {
   height: auto;
   padding: 10px 10px 0px 10px;
-  border: 1px solid #ddd;
+
 }
 @media(min-width: 768px) and ( max-width: 992px ){
   .left-sidebar
