--- a/api/views/homepage.ejs
+++ b/api/views/homepage.ejs
@@ -1,6 +1,6 @@
 <form id="uploadForm"
       enctype="multipart/form-data"
-      action="/upload/upload"
+      action="/asset/upload"
       method="post">
     <input type="file" name="csvFile" />
     <input type="submit" value="submit"/>
